--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -51,3 +51,9 @@ h1 {
     color: #999;
     font-size: 1.2rem;
 }
+.container {
+    max-width: 1200px; /* match the width you used for header image */
+    margin: 0 auto;     /* center horizontally */
+    padding: 0 10px;    /* small horizontal padding */
+    box-sizing: border-box;
+}
